fixing text display in mobile devices and fixing height of hwrap div in new wallet

--- a/src/app/wallet/wallet.component.css
+++ b/src/app/wallet/wallet.component.css
@@ -565,6 +565,7 @@ select option {
   overflow-x: hidden;
   background-size: cover;
   position: relative;
+  margin-bottom: 0.37rem !important;
 }
 
 .blockk2 {
@@ -2079,7 +2080,7 @@ p {
 /* (B) MOVING TICKER WRAPPER */
 .hmove {
   display: flex;
-  padding-top: 2%;
+  padding-top: 0%;
 }
 
 /* (C) ITEMS - INTO A LONG HORIZONTAL ROW */
@@ -2149,7 +2150,7 @@ p {
   }
 
   .hwrap {
-    bottom: -1em !important;
+    bottom: -0.2em !important;
     height: 10vh;
     background-size: cover;
     overflow: hidden; /* HIDE SCROLL BAR */
